--- a/xpengze-e.yaml
+++ b/xpengze-e.yaml
@@ -1,3 +1,8 @@
+# 自动更新配置 (如需启用请取消注释)
+auto_update:
+url: https://raw.githubusercontent.com/XPengze01/xpengze-e/main/xpengze-e.yaml
+interval: 86400
+
 ipv6: false
 http_port: 3080
 socks_port: 3090
